# ai-planning

./: .gitignore  CMakeLists.txt  README.md  main.cpp  simple_example.sas
include/: planning_task.h  planning_task_parser.h  planning_task_utils.h  pq.h
presentation/: beamercolorthemeSimplePlus.sty  slides.tex
script/: count.py  create_tasks.py  cumulative_distribution.py  find_best_solution.py  get_no_output_instances.py  get_unsolved_instances.py  randomization_analysis.py  run.py  run_algs.slurm
src/: planning_task.cpp  planning_task_parser.cpp  planning_task_utils.cpp
thesis/: bibliography.bib  main.tex
thesis/chapters/: abstract.tex  conclusions.tex  dedication.tex  heuristics.tex  intro.tex  methodology.tex  results.tex  test.tex  titlepage.tex
thesis/images/: graph.pdf_tex  hmax.pdf_tex  hmax_pruning.pdf_tex  shortest_path.pdf_tex
